# projectx

./: CMakeLists.txt  Doxyfile  README.md  gtest.txt  xbuild.sh
src/: event_sequencer.cpp  event_sequencer.hpp  main.cpp  mining_truck.cpp  mining_truck.hpp  mining_unload_station.cpp  mining_unload_station.hpp  random_duration_generator.hpp  simulation.cpp  simulation.hpp
src/infra/: assert_with_log.hpp  infra.cpp  infra.hpp  logger.hpp  sh3m_assert.hpp  sim_step_clock.hpp
src/infra/demo/: demo_infra.cpp  demo_log.cpp  demo_sim_step_clock.cpp
src/infra/tests/: test_logger.cpp
src/stats/: mining_truck_stats.cpp  mining_truck_stats.hpp  simulation_stats.cpp  simulation_stats.hpp  unload_station_stats.cpp  unload_station_stats.hpp
